panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_standard_va_opt_example.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_standard_va_opt_example.c
---
success: true
exit_code: 0
----- stdout -----





int x = 42 ;

int main() {
    return x;
}

----- stderr -----
