panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_stringise_does_not_recurse.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_stringise_does_not_recurse.c
---
success: true
exit_code: 0
----- stdout -----


int puts(char const*);



int main() {

    puts( "\"\\\"42\\\"\"" );
}

----- stderr -----
