panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_stringise_varargs.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_stringise_varargs.c
---
success: true
exit_code: 0
----- stdout -----
int puts(char const*);





int main() {

    puts( "" );

    puts( "" );

    puts( "hello" );

    puts( "2, 3" );

    puts( "hello, world" );


    puts( "\"" "" "\" => \"" "" "\"" );

    puts( "\"" "" "\" => \"" "" "\"" );

    puts( "\"" "hello world" "\" => \"" ",," "\"" );

    puts( "\"" "hello world" "\" => \"" "not, empty" "\"" );
}

----- stderr -----
