panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_undef_of_undefined_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_undef_of_undefined_macro.c
---
success: true
exit_code: 0
----- stdout -----
int printf(char const*, ...);
 



 
int main() {
    int x = 42;
    int y = 27;

    
    printf("%d, %d\n", y , y);




    
    printf("%d, %d\n", x, y);
}

----- stderr -----
