panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_va_opt_with_empty_varargs_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_va_opt_with_empty_varargs_simple.c
---
success: true
exit_code: 0
----- stdout -----





int main() {
    ;
    ;
}

----- stderr -----
